<resources>
    <string name="app_name">Telephone Book</string>
    <string name="btn_add_title">Add a new contact</string>
    <string name="btn_search_title">Search</string>

    <!-- Class Dao -->
    <string name="toast_text_insert_contact">Contact inserted successfully</string>
    <string name="toast_text_delete_contact">Contact deleted successfully</string>
    <string name="toast_text_update_contact">Contact edited successfully</string>
    <string name="toast_text_update_error">An error occurred while updating the contact</string>
    <string name="toast_text_load_error">An error occurred while loading the contacts</string>

    <!-- Add Contact Activity -->
    <string name="add_cont_title">New contact</string>
    <string name="hint_name">Name</string>
    <string name="img_photo_description">Add a photo</string>
    <string name="btn_save_text">Save</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_tel">Phone</string>
    <string name="hint_email">Email</string>
    <string name="text_toast_number_invalid">Invalid phone number</string>
    <string name="text_toast_email_invalid">Invalid email</string>

    <!-- recyclerView Layout -->
    <string name="label_name">Name: </string>
    <string name="label_nickname">Nickname: </string>
    <string name="label_tel">Telephone: </string>
    <string name="label_email">Email: </string>

    <!-- floating menu -->
    <string name="item_menu_edit_text">Edit contact</string>
    <string name="item_menu_delete_text">Delete contact</string>

</resources>
